# client_voice

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  voice_client_prd.md
docs/: CODING_GUIDELINES.md
docs/superpowers/specs/: 2026-06-03-tts-say-command-design.md
models/: README.md
src/: CMakeLists.txt  audio_capture.cc  audio_capture.h  audio_constants.h  audio_playback.cc  audio_playback.h  audio_processor.cc  audio_processor.h  chat_controller.cc  chat_controller.h  codec.cc  codec.h  main.cc  message_log.h  ring_buffer.h  transport.cc  transport.h  tts.cc  tts.h  types.h  ui.cc  ui.h  vad.cc  vad.h
tests/: CMakeLists.txt  ac3_endpoint_test.cc  ac4_utterance_loopback_test.cc  ac5_opus_codec_test.cc  ac7_bargein_test.cc  ac8_aec_test.cc  ac9_param_realtime_test.cc  audio_device_probe.cc  m2_monitor_loopback_test.cc  mic_level_monitor.cc  silero_vad_smoke_test.cc  text_loopback_test.cc  tts_synthesize_smoke_test.cc  vad_monitor.cc
